# Oblivion-messenger

./: .timetracker  README.md  config.json  package-lock.json  package.json  run.py  setup.py
RELEASE 1.1/: setup.py
RELEASE 1.1/app/: socket.py
RELEASE 1.1/app/templates/: login.html  register.html
RELEASE 1.1/databases/: database.py
app/: __init__.py  cert.pem  heartbeat.py  key.pem  routes.py  socket.py
app/static/css/: chat.css  landing.css  register.css  settings.css
app/static/js/: chat.js  database.js  encryption.js  fileEncrypt.js  keyhost.js  login.js  main.js  publicKeyGeneration.js  register.js  settings.js  signing.js  utils.js
app/static/js/cdn/: _assert.js  crypto.js  kyber.js  kyberfull.js  sha3.js  utils.js
app/static/js/utils/: convertions.js  database.js  encryption.js  fileEncrypt.js  signing.js  uiChatInteract.js  utils.js
app/templates/: chat.html  createkey.html  encryption.html  index.html  keyhost.html  landing.html  login.html  register.html  settings.html  test copy.html  test.html  test_features.html
databases/: users.db
databases/app/static/js/: keyhost.js  settings.js
databases/app/templates/: login.html  settings.html
src/: App.tsx  chat.html  index.css  index.html  main.js  profiles.js  tailwind.config.js
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: config.toml
src-tauri/capabilities/: mobile.json
src-tauri/dilithium-master/src/: api.rs  randombytes.rs  symmetric.rs
src-tauri/icons/: icon.icns
src-tauri/known_hosts/: db.sqlite
src-tauri/migrations/: 20250318171257_create_chats_table.sql
src-tauri/minimalist_pq_mls/: Cargo.toml
src-tauri/minimalist_pq_mls/src/: crypto.rs  group.rs  lib.rs  packet.rs  secrets.rs  tree.rs
src-tauri/pq_tls/src/: client.rs
src-tauri/src/: lib.rs
src-tauri/src/crypto/: keys.rs  mod.rs  objects.rs  utils.rs
src-tauri/src/database/: commands.rs  group_chat.rs  mod.rs  objects.rs  private_chat.rs  settings.rs  utils.rs
src-tauri/src/groups/: commands.rs  mod.rs  tcp_handles.rs  utils.rs
src-tauri/src/modules/: database.rs  encryption.rs  handle.rs  handle_keys.rs  mod.rs  objects.rs  tcp.rs  utils.rs
src-tauri/src/network/: client.rs  commands.rs  handle.rs  mod.rs  packet.rs  utils.rs
src-tauri/src/utils/: mod.rs  settings.rs  utils.rs
src/components/: AddChat.tsx  AddPrivateChat.tsx  AddProfile.tsx  CallPage.tsx  ChatList.tsx  ChatPage.tsx  Password.tsx  SelectProfile.tsx  SplashScreen.tsx
src/components/settings/: SettingsGeneral.tsx  SettingsMain.tsx  SettingsPrivacy.tsx
