[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pqc_dilithium = { path = "./dilithium-master" }
ring = "0.17"
aes-gcm = "0.10.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
bytes = "1.1"
rand = "0.8"
pqc_kyber = {version = "0.7.1", features = ["kyber1024"] }
lazy_static = "1.4"
tauri-plugin-store = "2.2.0"
once_cell = "1.21.1"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
futures = "0.3.31"
uuid = { version = "1.16.0", features = ["v4"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
tauri-plugin-notification = "2"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
bcrypt = "0.17.0"
chrono = "0.4.40"

[profile.dev]
incremental = true



