[package]
name = "oblivion-messenger"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2.2.0"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
bytes = "1.1"
once_cell = "1.21.1"
lazy_static = "1.4"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
futures = "0.3.31"
uuid = { version = "1.16.0", features = ["v4"] }
hmac = "0.12.1"
chrono = "0.4.40"

pqc_dilithium = { path = "./dilithium-master", features = ["mode3", "random_signing", "aes"] }
safe_pqc_kyber = { path = "pqc_kyber_improved", features = ["kyber1024", "zeroize"], version = "0.6.3" }
ring = "0.17"
aes-gcm = "0.10.0"
hkdf = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12.2"
bcrypt = {version = "0.17.0", features = ["zeroize"] }
bip39 = { version = "2.1.0", features = ["rand", "zeroize"] }
blake3 = "1.8.2"
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }
minimalist_pq_mls = { version = "0.1.0", path = "minimalist_pq_mls" }
bincode = "1.3.3"
pq_tls = { version = "0.1.0", path = "pq_tls" }
# arti-client = { version = "0.30.0", features = ["static-sqlite", "static-native-tls", "rustls"] }

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256 
lto = false 

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
debug = false

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
