[package]
name = "minimalist_pq_mls"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_core = "0.6"
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10" 
aes = "0.8"     
safe_pqc_kyber = { version = "0.6.3", path = "../pqc_kyber_improved", features = ["kyber1024"]}
pqc_dilithium = { version = "0.2.0", features = ["mode3", "random_signing", "aes"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4.3"
blake3 = "1.8.2"
chacha20poly1305 = "0.10.1"
aead = "0.5"
